Fix paragraph align (closes #123)

--- a/app/assets/stylesheets/_about.sass
+++ b/app/assets/stylesheets/_about.sass
@@ -55,6 +55,16 @@
       a.btn
         margin-top: 20px
 
+    &.live
+      h4
+        color: black
+        font-weight: normal
+        text-transform: uppercase
+
+      .btn
+        margin-bottom: 40px
+
+
   .theTeam, .festTeam
     li
       padding: 10px 0
