--- a/app/assets/stylesheets/_communities.sass
+++ b/app/assets/stylesheets/_communities.sass
@@ -32,21 +32,3 @@
   p.title
     text-transform: uppercase
     margin-bottom: 5px
-
-#page-live
-  section
-    padding: 64px 0
-
-  .banner
-    background: #CCC
-    width: 100%
-    display: block
-
-  .more-content
-    h4
-      color: black
-      font-weight: normal
-      text-transform: uppercase
-
-    .btn
-      margin-bottom: 40px
